--- a/frontend/src/component/Nav/Nav.css
+++ b/frontend/src/component/Nav/Nav.css
@@ -1,6 +1,7 @@
 .nav {
   display: flex;
   padding: 1rem;
+  width: 100vw;
   align-items: center;
   justify-content: left;
   background-color: #264653;
