--- a/frontend/src/component/SignIn/SignIn.css
+++ b/frontend/src/component/SignIn/SignIn.css
@@ -13,3 +13,17 @@
 
   padding: 1rem;
 }
+
+.signin__form__input {
+  padding: 5px;
+}
+
+.signin__form__submit {
+  padding: 5px;
+  border: 1px solid #0a9396;
+  border-radius: 5px;
+  background-color: #0a9396;
+  color: black;
+  font-size: 15px;
+  font-weight: 700;
+}
